--- a/css/rankings.css
+++ b/css/rankings.css
@@ -212,7 +212,7 @@ th, td {
         padding-bottom: 0;
     }
     
-    .bg .bg-site-info h1, p {
+    .bg .bg-site-info h1, .bg-site-info p {
         display: none;
     }
 
