--- a/posts/samplepost.css
+++ b/posts/samplepost.css
@@ -238,7 +238,7 @@ th, td {
         padding-bottom: 0;
     }
     
-    .bg .bg-site-info h1, p {
+    .bg .bg-site-info h1, .bg-site-info p {
         display: none;
     }
 
